<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.graham.partner.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_service"
        android:name="com.app.graham.partner.ui.addservice.AddService"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_add_service" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.app.graham.partner.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.app.graham.partner.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_addpackage"
        android:name="com.app.graham.partner.ui.packagesdetails.AddPackages"
        android:label="@string/menu_addpackage"
        tools:layout="@layout/fragment_add_packages" />
</navigation>