<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shop.AddShopActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robotoslabregular"
                android:text="Add Shop"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textSizeXLarge"
                android:textStyle="bold"
                android:visibility="visible" />

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_20sdp">

        <RelativeLayout
            android:id="@+id/addshop_relative"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_10sdp"
            android:background="@drawable/greyshape">

            <ImageView
                android:id="@+id/addshop_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:onClick="onClick" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/addshop_relative"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addshop_shopnameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/addshop_shopname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/shopname" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addshop_addressInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/addshop_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/shopaddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addshop_cityInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/addshop_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/city" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addshop_stateInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/addshop_state"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/state" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addshop_pincodeInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/addshop_pincode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/pincode" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addshop_emailInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/addshop_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/prompt_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addshop_maobileInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <EditText
                    android:id="@+id/addshop_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/mobileno" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/addshop_open"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center_horizontal"
                android:background="@drawable/editgreyborderline"
                android:layout_margin="@dimen/_8sdp"
                android:hint="@string/shopopentime"
                android:padding="@dimen/_8sdp" />

            <TextView
                android:id="@+id/addshop_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/_8sdp"
                android:onClick="onClick"
                android:background="@drawable/editgreyborderline"
                android:layout_alignParentLeft="true"
                android:layout_margin="@dimen/_8sdp"
                android:hint="@string/shopclosetime" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:padding="@dimen/_5sdp"
                android:onClick="onClick"
                android:text="@string/shoptype" />

            <RadioGroup
                android:id="@+id/addshopradioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstName_textinputlayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_toRightOf="@+id/image_layout"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_5sdp"
                android:weightSum="3">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/lightgrey"
                    android:text="@string/male"
                    android:textColor="@color/contentTextColor"
                    android:textSize="@dimen/textSize7" />


                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioGroup1"
                    android:layout_alignLeft="@+id/radioGroup1"
                    android:layout_weight="1"
                    android:buttonTint="@color/lightgrey"
                    android:text="@string/female"
                    android:textColor="@color/contentTextColor"
                    android:textSize="@dimen/textSize7" />

                <RadioButton
                    android:id="@+id/radioOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/radioGroup1"
                    android:layout_alignLeft="@+id/radioGroup1"
                    android:layout_weight="1"
                    android:buttonTint="@color/lightgrey"
                    android:text="@string/unisex"
                    android:textColor="@color/contentTextColor"
                    android:textSize="@dimen/textSize7" />


            </RadioGroup>


            <Button
                android:id="@+id/addshop_btn"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/otptxt"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_50sdp"
                android:background="@drawable/loginbtn_shape"
                android:onClick="onClick"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="@string/addshops"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </LinearLayout>


    </RelativeLayout>
</LinearLayout>
</ScrollView>